VariationHandling/JES_files/2016_preVFP/Histo_1000_TTTo2L2Nu_boostedShiftedSrc26Up.err
[8MB/455.1MB][  1%][>                                                 ][2.667MB/s]  [16MB/455.1MB][  3%][=>                                                ][3.2MB/s]  [24MB/455.1MB][  5%][==>                                               ][4MB/s]  [32MB/455.1MB][  7%][===>                                              ][4MB/s]  [40MB/455.1MB][  8%][====>                                             ][3.636MB/s]  [48MB/455.1MB][ 10%][=====>                                            ][3.2MB/s]  [56MB/455.1MB][ 12%][======>                                           ][2.667MB/s]  [64MB/455.1MB][ 14%][=======>                                          ][2.56MB/s]  [72MB/455.1MB][ 15%][=======>                                          ][2.483MB/s]  [80MB/455.1MB][ 17%][========>                                         ][2.424MB/s]  [88MB/455.1MB][ 19%][=========>                                        ][2.444MB/s]  [96MB/455.1MB][ 21%][==========>                                       ][2.526MB/s]  [104MB/455.1MB][ 22%][===========>                                      ][2.667MB/s]  [112MB/455.1MB][ 24%][============>                                     ][2.732MB/s]  [120MB/455.1MB][ 26%][=============>                                    ][2.857MB/s]  [128MB/455.1MB][ 28%][==============>                                   ][2.977MB/s]  [136MB/455.1MB][ 29%][==============>                                   ][3.091MB/s]  [144MB/455.1MB][ 31%][===============>                                  ][3.13MB/s]  [152MB/455.1MB][ 33%][================>                                 ][3.234MB/s]  [160MB/455.1MB][ 35%][=================>                                ][3.333MB/s]  [168MB/455.1MB][ 36%][==================>                               ][3.429MB/s]  [176MB/455.1MB][ 38%][===================>                              ][3.52MB/s]  [184MB/455.1MB][ 40%][====================>                             ][3.608MB/s]  [192MB/455.1MB][ 42%][=====================>                            ][3.692MB/s]  [200MB/455.1MB][ 43%][=====================>                            ][3.774MB/s]  [216MB/455.1MB][ 47%][=======================>                          ][4MB/s]  [232MB/455.1MB][ 50%][=========================>                        ][4.218MB/s]  [248MB/455.1MB][ 54%][===========================>                      ][4.429MB/s]  [272MB/455.1MB][ 59%][=============================>                    ][4.772MB/s]  [296MB/455.1MB][ 65%][================================>                 ][5.103MB/s]  [328MB/455.1MB][ 72%][====================================>             ][5.559MB/s]  [352MB/455.1MB][ 77%][======================================>           ][5.867MB/s]  [368MB/455.1MB][ 80%][========================================>         ][6.033MB/s]  [376MB/455.1MB][ 82%][=========================================>        ][6.065MB/s]  [384MB/455.1MB][ 84%][==========================================>       ][6MB/s]  [392MB/455.1MB][ 86%][===========================================>      ][5.939MB/s]  [400MB/455.1MB][ 87%][===========================================>      ][5.797MB/s]  [408MB/455.1MB][ 89%][============================================>     ][5.589MB/s]  [416MB/455.1MB][ 91%][=============================================>    ][5.547MB/s]  [424MB/455.1MB][ 93%][==============================================>   ][5.506MB/s]  [432MB/455.1MB][ 94%][===============================================>  ][5.538MB/s]  [440MB/455.1MB][ 96%][================================================> ][5.5MB/s]  [448MB/455.1MB][ 98%][=================================================>][5.271MB/s]  [455.1MB/455.1MB][100%][==================================================][5.057MB/s]  [455.1MB/455.1MB][100%][==================================================][5.001MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_25207/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_25207/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
